Fix Aligned display (go back to flex)

--- a/core/src/main/resources/render/theme/layout/beamer.css
+++ b/core/src/main/resources/render/theme/layout/beamer.css
@@ -67,6 +67,7 @@ table tr:last-child td {
 }
 
 .box {
+    width: 100%;
     margin: 12px;
     border-radius: 8px;
 }
